Task/fp 273 app height too short in safari browser (#6)
* FP-273: Fix app height too short in Safari browser

1. Remove stylesthat are ineffectual in Safari.
2. Remove redundant style (same as step 1)
3. Extend use flex solution, which works in Safari too.

* FP-273: Fix height of Data Files Sidebar

* FP-273: Allow dynamic fit height for Allocations

* FP-273: Quick: Consistent and accurate comments

* FP-273: Quick: More… comment consistency

* FP-273: Remove style I added just for clarity

* FP-273: Hack loading icon height (pending FP-426)

Co-authored-by: Sal Tijerina <r.sal.tijerina@gmail.com>

--- a/client/src/components/Dashboard/Dashboard.scss
+++ b/client/src/components/Dashboard/Dashboard.scss
@@ -5,14 +5,14 @@
     padding: 20px 40px 0 25px;
 }
 .dashboard-items {
-    /* Styles as a flex child */
+    /* As a flex item */
     flex-grow: 1;
 
-    /* Styles as a flex parent */
+    /* As a flex container */
     display: flex;
     flex-direction: column;
 }
-/* Make bottom item fill up remaining vertical space */
+/* Make bottom-most item fill up remaining vertical space */
 .dashboard-items > :last-child {
     flex-grow: 1;
 }
