--- a/client/src/components/Allocations/Allocations.scss
+++ b/client/src/components/Allocations/Allocations.scss
@@ -18,20 +18,31 @@
     padding-left: 0;
 }
 #allocations-wrapper {
-    width: 100%;
+    display: flex;
+    flex-direction: column;
+
     padding-right: 32px;
 }
 #allocations-container {
+    /* As a flex item */
+    flex-grow: 1;
+
+    /* As a flex container */
     display: flex;
     flex-direction: row;
+
     border-top: 1px solid #707070;
-    height: calc(100vh - 116px);
 }
+/* Make right-most item fill up remaining horizontal space */
+#allocations-container > :last-child {
+    flex-grow: 1;
+}
+
 #allocations-header {
     @include alloc-button();
     display: flex;
     justify-content: space-between;
-    margin: 21px auto 0.5rem 1.75rem;
+    margin: 21px 0 0.5rem 1.75rem;
     padding-left: 0.2em;
     #header-text {
         font-size: 1.25rem;
@@ -191,4 +202,10 @@
     .active-user {
         background-color: #dfdaf5;
     }
+}
+
+/* HACK: The loading icon should not need height set, but it fixes Safari here */
+/* FP-426: Do not use `height: 100%` or isolate usage pending solution to bigger problem */
+#allocations-wrapper .loading-icon {
+    height: auto;
 }
