--- a/client/src/components/_common/InfiniteScrollTable/InfiniteScrollTable.scss
+++ b/client/src/components/_common/InfiniteScrollTable/InfiniteScrollTable.scss
@@ -97,7 +97,7 @@ Styleguide Objects.FixedHeaderTable
   border-collapse: collapse;
 }
 
-.o-fixed-header-table thead tr {
+.o-fixed-header-table tr {
   display: flex;
   flex-direction: row;
 }
