Quick: Add another comment

--- a/client/src/components/_common/InfiniteScrollTable/InfiniteScrollTable.scss
+++ b/client/src/components/_common/InfiniteScrollTable/InfiniteScrollTable.scss
@@ -50,7 +50,8 @@
       }
     }
   }
-  /* Allow width from `.o-fixed-header-table` to apply to common inline elements */
+  /* Allow `.o-fixed-header-table td` width to apply to common inline elements */
+  /* Allow `u-ellipsis` usage to have effect on common inline elements */
   & td > a,
   & td > span {
     display: inline-block;
