Updating Max file size message Fixing upload icon size for File dropzone

--- a/client/src/components/_common/Form/FileInputDropZone.scss
+++ b/client/src/components/_common/Form/FileInputDropZone.scss
@@ -14,7 +14,7 @@
     .icon-action-upload {
         color: #70707026;
         display: flex;
-        font-size: 16em;
+        font-size: 12rem;
         position: absolute;
     }
 }
