FP-387: Minimal fix for justified `noDataText` bug
And moved a style from `.o-fixed-header-table` to `InfiniteScrollTable`.

--- a/client/src/components/Jobs/Jobs.scss
+++ b/client/src/components/Jobs/Jobs.scss
@@ -19,6 +19,9 @@
   th:nth-child(5),
   td:nth-child(5) { width: 15%; }
 }
+.jobs-view__message {
+  text-align: center;
+}
 
 .job__name,
 .job__path {
