--- a/client/src/components/_common/InfiniteScrollTable/InfiniteScrollTable.scss
+++ b/client/src/components/_common/InfiniteScrollTable/InfiniteScrollTable.scss
@@ -55,6 +55,10 @@
   & td > a,
   & td > span {
     display: inline-block;
+
+    /* Stretch cell content to fit available space */
+    /* WARNING: Unexpected behavior with child text nodes `<td>…<a>…</a>…</td>` */
+    width: 100%;
   }
 }
 
@@ -112,11 +116,4 @@ Styleguide Objects.FixedHeaderTable
   overflow: auto;
   width: 100%;
   height: var(--fixed-header-table--body-height, var(--body-height));
-}
-/* Stretch cell content to fit available space */
-/* WARNING: This is ineffectual for inline elements */
-.o-fixed-header-table td > * {
-  /* display: inline-block; *//* define this only in consumer styles for inline elements */
-
-  width: 100%;
 }
