--- a/client/src/components/_common/InfiniteScrollTable/InfiniteScrollTable.scss
+++ b/client/src/components/_common/InfiniteScrollTable/InfiniteScrollTable.scss
@@ -50,6 +50,9 @@
       }
     }
   }
+  .-status__message {
+    text-align: center;
+  }
   /* Allow `.o-fixed-header-table td` width to apply to common inline elements */
   /* Allow `.u-ellipsis` usage to have effect on common inline elements */
   & td > a,
