Quick: Class `jobs-view__…` → `-status__…`

--- a/client/src/components/_common/InfiniteScrollTable/InfiniteScrollTable.scss
+++ b/client/src/components/_common/InfiniteScrollTable/InfiniteScrollTable.scss
@@ -49,6 +49,9 @@
         clear: both;
       }
     }
+    .-status__message {
+      text-align: center;
+    }
   }
   /* Allow `.o-fixed-header-table td` width to apply to common inline elements */
   /* Allow `.u-ellipsis` usage to have effect on common inline elements */
