--- a/client/src/components/DataFiles/DataFilesToolbar/DataFilesToolbar.scss
+++ b/client/src/components/DataFiles/DataFilesToolbar/DataFilesToolbar.scss
@@ -12,16 +12,15 @@
       padding-right: 5px;
       font-size: 1.3em;
     }
-  }
+    & + .data-files-toolbar-button {
+      margin-left: 5px;
+    }
+}
 .data-files-toolbar-button:not(.disabled):hover {
     background-color: #AFAFAF;
     color: #484848;
     border-color: #484848;
     border-radius: 0;
-}
-
-.data-files-toolbar-button + .data-files-toolbar-button {
-    margin-left: 5px;
 }
 
 .toolbar-button-text {
