--- a/client/src/components/_common/InfiniteScrollTable/InfiniteScrollTable.scss
+++ b/client/src/components/_common/InfiniteScrollTable/InfiniteScrollTable.scss
@@ -1,5 +1,5 @@
 .InfiniteScrollTable {
-  --fixed-header-table--body-height: 30vh; /* calculated by guess & check */
+  --cell-horizontal-padding: 0.35em; /* horizontal cell padding for inter-column buffer */
   /* TODO: After, FP-103, use `composes:` not `@extend` */
   @extend .o-fixed-header-table;
 
@@ -8,6 +8,7 @@
   width: 100%;
   overflow: scroll;
   border-bottom: 1px solid #707070;
+  max-height: inherit; /* inherit max-height from parent wrapper */
 
   thead {
     user-select: none;
@@ -16,6 +17,12 @@
 
     .-sort-asc, .sort-desc {
       color: #484848;
+    }
+
+    /* Match horizontal padding of `td` elements in table to align properly */
+    th {
+      padding-left: var(--cell-horizontal-padding);
+      padding-right: var(--cell-horizontal-padding);
     }
   }
 
@@ -32,9 +39,25 @@
       background-color: rgba(0, 0, 0, 0.05);
     }
 
+    td {
+      display: flex;
+      align-content: center;
+      padding: 0.5em var(--cell-horizontal-padding);
+      margin: auto 0; /* vertically center span content */
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+
+      /* Contain children to cell size and add ellipsis to overflow by default */
+      >:only-child {
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
+    }
+
     .-status {
       width: 100%;
-      display:block; 
+      display:block;
       box-sizing:border-box;
       td {
         /* FAQ: Because widths can be defined by component that uses this one,
@@ -44,7 +67,7 @@
         padding-top: 0.5em;
         padding-bottom: 0.5em;
         text-align: justify;
-        display:block; 
+        display:block;
         box-sizing:border-box;
         clear: both;
       }
@@ -76,9 +99,6 @@ A table with a header that does not move, and a body that scrolls.
 
 > __Warning__: This forces table to become a fixed layout, and requires manually calculated column widths
 
-Properties:
-- `--fixed-header-table--body-height: 100px` - The height of the body of the table.
-
 Markup:
 <table class="fixed-header-table">
     <thead>
@@ -100,10 +120,6 @@ Markup:
 Styleguide Objects.FixedHeaderTable
 */
 .o-fixed-header-table {
-  /* RFE: Find a way to make this automatically calculated */
-  /* WARNING: Every consumer must define this value to match their layout */
-  --body-height: 100px;
-
   table-layout: fixed;
   border-collapse: collapse;
 }
@@ -118,5 +134,5 @@ Styleguide Objects.FixedHeaderTable
   display: block;
   overflow: auto;
   width: 100%;
-  height: var(--fixed-header-table--body-height, var(--body-height));
+  max-height: inherit; /* inherit max-height from InfiniteScrollTable */
 }
