--- a/client/src/components/Jobs/Jobs.scss
+++ b/client/src/components/Jobs/Jobs.scss
@@ -1,7 +1,21 @@
-.ReactTable .rt-thead {
-  overflow-y: scroll;
+.jobs-view {
+  /* icon */
+  th:nth-child(1),
+  td:nth-child(1) { min-width: 2em; }
+  /* name */
+  th:nth-child(2),
+  td:nth-child(2) { width: 50%; }
+  /* path */
+  th:nth-child(3),
+  td:nth-child(3) { width: 50%; }
+  /* date */
+  th:nth-child(4),
+  td:nth-child(4) { min-width: 10em; }
+  /* status */
+  th:nth-child(5),
+  td:nth-child(5) { min-width: 6em; }
 }
 
-.ReactTable .pagination-bottom {
-  display: none;
+.job__path {
+  direction: rtl; /* move overflow/ellipsis to left of text */
 }
