--- a/client/src/components/_common/InfiniteScrollTable/InfiniteScrollTable.scss
+++ b/client/src/components/_common/InfiniteScrollTable/InfiniteScrollTable.scss
@@ -15,7 +15,8 @@
     color: #707070;
     border-bottom: 1px solid #707070;
 
-    .-sort-asc, .sort-desc {
+    .-sort-asc,
+    .sort-desc {
       color: #484848;
     }
 
@@ -49,7 +50,7 @@
       white-space: nowrap;
 
       /* Contain children to cell size and add ellipsis to overflow by default */
-      >:only-child {
+      & > :only-child {
         overflow: hidden;
         text-overflow: ellipsis;
       }
@@ -57,8 +58,8 @@
 
     .-status {
       width: 100%;
-      display:block;
-      box-sizing:border-box;
+      display: block;
+      box-sizing: border-box;
       td {
         /* FAQ: Because widths can be defined by component that uses this one,
                 and those width might not use a class, we must overwrite it */
@@ -67,8 +68,8 @@
         padding-top: 0.5em;
         padding-bottom: 0.5em;
         text-align: justify;
-        display:block;
-        box-sizing:border-box;
+        display: block;
+        box-sizing: border-box;
         clear: both;
       }
     }
@@ -125,10 +126,12 @@ Styleguide Objects.FixedHeaderTable
 }
 
 /* Make table rows act like table rows, even though `tbody` has become a block */
+/* FP-130: Migrates this to another stylesheet *//* stylelint-disable no-descending-specificity */
 .o-fixed-header-table tr {
   display: flex;
   flex-direction: row;
 }
+/* stylelint-enable no-descending-specificity */
 /* Allow table body to scroll (which also pins the table head in place) */
 .o-fixed-header-table tbody {
   display: block;
