--- a/client/src/components/_common/InfiniteScrollTable/InfiniteScrollTable.scss
+++ b/client/src/components/_common/InfiniteScrollTable/InfiniteScrollTable.scss
@@ -7,7 +7,6 @@
   align-items: stretch;
   width: 100%;
   overflow: scroll;
-  border-bottom: 1px solid #707070;
   max-height: inherit; /* inherit max-height from parent wrapper */
 
   thead {
@@ -86,6 +85,16 @@
     /* WARNING: Unexpected behavior with child text nodes `<td>…<a>…</a>…</td>` */
     width: 100%;
   }
+}
+.InfiniteScrollTable--is-loading {
+  & .-status {
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
+  }
+}
+.InfiniteScrollTable--has-data,
+.InfiniteScrollTable--no-data {
+  border-bottom: 1px solid #707070;
 }
 
 
