Add padding to dashboard errors

--- a/client/src/components/SystemMonitor/SystemMonitor.scss
+++ b/client/src/components/SystemMonitor/SystemMonitor.scss
@@ -36,4 +36,5 @@ $table-border: 1px solid black;
     justify-content: center;
     align-items: center;
     color: #9d85ef;
+    padding: 30px;
 }
