--- a/client/src/components/Tickets/TicketsLayout.scss
+++ b/client/src/components/Tickets/TicketsLayout.scss
@@ -7,3 +7,11 @@
 .ticket-unknown-status {
   font-family: monospace;
 }
+
+.ticket__error {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #9d85ef;
+  padding: 30px;
+}
