--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -14,9 +14,11 @@
 
 /* ELEMENTS */
 @import url('./elements/inline-text.css');
+@import url('./elements/table.css');
 
 /* OBJECTS */
 /* NOTE: For the most part, allow React components to explicitely import as needed */
+@import url('./objects/o-fixed-header-table.css');
 
 /* COMPONENTS */
 /* NOTE: For the most part, allow React components to explicitely import as needed */
