--- a/client/src/styles/trumps/u-ellipsis.scss
+++ b/client/src/styles/trumps/u-ellipsis.scss
@@ -1,7 +1,5 @@
 .u-ellipsis {
   /* display: block; *//* Set relevant value in consumer styelsheet */
 
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
+  @include truncate-with-ellipsis;
 }
