FP-363: Link to doc. Remove wrong role. New line.

--- a/server/portal/templates/includes/navigation.html
+++ b/server/portal/templates/includes/navigation.html
@@ -1,13 +1,7 @@
-{% comment %}
-Unused Settings
-===
-These settings were used before 2020-01 consolidation of Portal & CMS header.
-They seem useful, and would be re-incoprorated when their usage is necessary.
-
-- settings.PORTAL_NAVBAR_BACKGROUND_FILENAME
-- settings.PORTAL_LOGO_FILENAME
-- settings.PORTAL_NAMESPACE
-{% endcomment %}
+{# NOTE: Removed references to unused settings #}
+{# NOTE: Template includes differs slightly from CMS #}
+{# WARNING: Some markup is duplicated in other repositories #}
+{# SEE: https://confluence.tacc.utexas.edu/x/LoCnCQ #}
 
 <!-- Sponsor Logos -->
 <div class="branding-header">
